--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,11 @@
 }
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #020aaa;
+  padding: 10px;
+  margin-left: 10px;
   text-decoration: inherit;
+
 }
 a:hover {
   color: #535bf2;
@@ -34,6 +37,7 @@ h1 {
 
 button {
   border-radius: 8px;
+  margin-left: 1rem;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -48,4 +52,8 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.navbar{
+  margin-bottom: 2rem;
 }
